[tool.poetry]
name = "video-to-audio"
version = "0.1.0"
description = "Convert video files to audio files automagically"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_to_audio"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
